[package]
name = "bitcask-rs"
version = "0.1.0"
authors = ["gfreezy <gfreezy@gmail.com>"]

[dependencies]
failure = "0.1.1"
derive_builder = "0.5.1"
log = "0.4.3"
itertools = "0.7.8"
io-at = "0.4.1"
log4rs = "0.8.0"
integer-encoding = "1.0.5"
lazy_static = "1.0.2"
regex = "1.0.2"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_yaml = "0.7.5"
uuid = { version = "0.6", features = ["v4"] }

